# sharp_qa_marketing_ai_agent

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
config/: scoring_weights.yaml  settings.py  sources.yaml
config/email_templates/: template_001.md  template_002.md  template_003.md  template_004.md  template_005.md  template_006.md  template_007.md  template_008.md
scripts/: build_windows_exe.ps1  install_unix.sh  install_windows.ps1  warmup_ollama.py
src/sharpqa_agent/: __init__.py  main.py
src/sharpqa_agent/analyzers/: __init__.py  axe_runner.py  finding_normalizer.py  finding_severity.py  lighthouse_runner.py  playwright_auditor.py  security_header_checker.py
src/sharpqa_agent/core/: __init__.py  database.py  embeddings.py  exceptions.py  llm_client.py  logging_setup.py  models.py  schema.sql  vector_store.py
src/sharpqa_agent/dashboard/: __init__.py  app.py
src/sharpqa_agent/drafter/: __init__.py  email_drafter.py  prompt_builder.py  rag_retriever.py  subject_line_generator.py  tone_adjuster.py
src/sharpqa_agent/enrichers/: __init__.py  contact_enricher.py  email_pattern_guesser.py  social_handle_finder.py  tech_stack_detector.py
src/sharpqa_agent/exporter/: __init__.py  (+2 more)
tests/: conftest.py
tests/test_analyzers/: test_finding_severity.py  test_security_headers.py
tests/test_drafter/: test_email_drafter.py  test_prompt_builder.py
tests/test_enrichers/: test_tech_stack.py
tests/test_orchestrator/: test_database.py
tests/test_sourcers/: test_yc_sourcer.py
(+25 files in other folders)
